  allocate a large amount of memory and took a long time to compute.

  Thanks to Alex Pyrgiotis for the timing test case.

  This change avoids that resource-intensive computation, and significantly
  improves the performance when importing the module and when starting the
  daemon.

  Thanks to Igor Kholopov for the implementation.

  Closes: Pagure #72. Thanks to Anton Anton for the report.

Added:

* Document a `ServiceRunner` class as an example of using `DaemonContext`.

Changed:

* Raise a TypeError if any `exclude` values are not valid file descriptors.

  Formerly, an invalid value might be silently ignored.

  Thanks to Igor Kholopov for the suggestion.

* Migrate package version handling to use Setuptools API.

  The Distutils library is deprecated for direct use; see
  `<https://docs.python.org/3/whatsnew/3.10.html#distutils-deprecated>`_.

  Closes: Pagure #70.

Removed:

* Remove redundant ‘wheel’ from the requirements specification.

  As described by the Python Packaging Authority:

      This [‘wheel’] dependency is exposed automatically by setuptools and the
      users do not need to declare it explicitly — it will be installed by PEP
      517 front-ends automatically, when building wheels.

  Thanks to Michał Górny for the implementation.

* Remove Setuptools ‘test’ command support.

  The ‘test’ command is formally deprecated, in favour of dedicated test
  runners. `<https://setuptools.pypa.io/en/stable/history.html#v41-5-0>`_

* Remove Setuptools ‘register’ and ‘upload’ command support.

  The commands to publish a distribution to PyPI are removed, in favour of the
  Twine tool. `<https://setuptools.pypa.io/en/stable/history.html#v42-0-0>`_

* Remove the obsolete `runner` module.

  This module was deprecated starting in `python-daemon` version 2.1.2, and is
  now removed as unmaintained.


Version 2.3.2
=============

:Released: 2022-10-23
:Maintainer: Ben Finney <ben+python@benfinney.id.au>

Bugs Fixed:
